--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ ul {
 
 a {
     text-decoration: none;
+    color: white;
 }
 
 body {
@@ -14,7 +15,7 @@ body {
     display: flex;
     flex-direction: column;
 
-    background-color: #1A1A1D;
+    background-color: #1F2833;
     color: white;
 
     padding: 0;
@@ -22,14 +23,15 @@ body {
 }
 
 .header-container {
-    min-width: 100%;
+    min-width: 100vh;
     max-height: 10vh;
     padding: 0% 5%;
 
     display: flex;
     justify-content: space-between;
 
-    background-color: #6F2232;
+    background-color: #0B0C10;
+    font-size: 2vh;
 }
 
 .header-github-logo {
@@ -48,35 +50,64 @@ body {
 
 .right-side-container {
     display: flex;
+    flex-direction: row-reverse;
     align-items: center;
     gap: 20px;
+
+    font-weight: bold;
+    font-size: 2vh;
+}
+
+.theme-box {
+    justify-content: flex-end;
 }
 
 #themes {
-    background-color: rgba(173, 173, 173, 0.5);
-    border: 2px solid white;
+    background-color: #0B0C10;
+    border: 2px solid #0B0C10;
     border-radius: 5px;
+    color: white;
+    font-weight: bold;
+    font-size: 2vh;
 }
 
 .nav-bar-container {
-    background-color: red;
+    background-color: #2e4055;
 
-    min-width: 300px;
-    max-width: 10%;
+    min-width: 0%;
+    max-width: 30vh;
 
     min-height: 100vh;
 
     display: flex;
     flex: 1;
     flex-direction: column;
-    align-items: center;
+    align-items: space-around;
+    padding: 2vh;
+    gap: 2vh;
+}
 
-
+.nav-content-boxes:hover {
+    background-color: rgb(131, 111, 185);
 }
 
 .nav-content-boxes {
-    display: flex;
+    max-width: 100%;
 
+    min-width: 0%;
+    min-height: 15%;
+
+    font-weight: bold;
+    font-size: 2vh;
+
+    background-color: rgb(86, 72, 124);
+    border-radius: 1vh;
+
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .base-container {
@@ -93,10 +124,14 @@ body {
 
 }
 
+.card-container:hover {
+    background-color: #8db3d8;
+}
+
 .card-container {
     max-width: 300px;
     max-height: 400px;
-    background-color: white;
+    background-color: #C5C6C7;
     border-radius: 10px;
 
     display: flex;
@@ -117,5 +152,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: black;
+    color:black;
+    font-weight: bold;
 }
